--- a/Rules
+++ b/Rules
@@ -22,6 +22,11 @@ compile '/stylesheet/' do
   # don’t filter or layout
 end
 
+compile '/changes/' do
+  filter :erb
+  layout 'default'
+end
+
 compile '*' do
   if item.binary?
     # don’t filter binary items
