--- a/Rules
+++ b/Rules
@@ -25,6 +25,7 @@ end
 compile '/changes/' do
   filter :erb
   filter :kramdown
+  filter :wiki
   layout 'default'
 end
 
@@ -33,6 +34,7 @@ compile '*' do
     # don’t filter binary items
   else
     filter :kramdown
+    filter :wiki
     layout 'default'
   end
 end
