tag support: sortable list of tags (by its counter)
TODO: when list all items for a tag, we need a simple way to sort them
in any kind of order, and we need to limit the size of output to reduce
the bandwidth. we should implement a js search engine at client side

--- a/Rules
+++ b/Rules
@@ -20,7 +20,7 @@
 
 preprocess do
   def generate_tag_pages
-    all_tags.each do |tag|
+    all_tags.each do |tag, count|
       @items << Nanoc::Item.new(
         "<%= render '_tag', {:tag => '#{tag}'} %>",
         { :title => "Tag #{tag}", :virtual => true },
